<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <groupId>com.bbende</groupId>
    <artifactId>project-starter</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Project Starter</name>

    <properties>
        <!-- Project/Plugin related properties -->
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
        <maven.checkstyle.plugin.version>3.1.1</maven.checkstyle.plugin.version>
        <maven.checkstyle.puppycrawl.version>8.31</maven.checkstyle.puppycrawl.version>
        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
        <maven.source.plugin.version>3.2.0</maven.source.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
        <maven.download.plugin.version>1.2.1</maven.download.plugin.version>
        <maven.frontend.plugin.version>1.6</maven.frontend.plugin.version>
        <maven.eclipselink.plugin.version>2.7.1.1</maven.eclipselink.plugin.version>
        <maven.dockerfile.plugin.version>1.4.13</maven.dockerfile.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Dependency Versions -->
        <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
        <jackson.version>2.11.0</jackson.version>
        <flyway.version>6.3.2</flyway.version>
        <flyway.tests.version>6.1.0</flyway.tests.version>
        <eclipse.link.version>2.7.6</eclipse.link.version>
        <h2.version>1.4.200</h2.version>
        <postgres.driver.version>42.2.5</postgres.driver.version>
        <mysql.driver.version>8.0.15</mysql.driver.version>
        <mariadb.driver.version>2.4.1</mariadb.driver.version>
        <test.containers.version>1.14.3</test.containers.version>
        <node.version>v10.14.1</node.version>
        <npm.version>6.4.1</npm.version>
        <swagger.ui.version>3.12.0</swagger.ui.version>
        <swagger.version>2.1.2</swagger.version>
        <commons.lang.version>3.10</commons.lang.version>
        <thymeleaf.dialect.version>2.4.1</thymeleaf.dialect.version>

        <!-- Default env name (dist or dev)-->
        <env.name>dist</env.name>
    </properties>

    <modules>
      <module>project-starter-webapp</module>
      <module>project-starter-assembly</module>
      <module>project-starter-docker</module>
      <module>project-starter-testcontainers</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- Sets env.name=dev so frontend-maven-plugin can tell Gulp to disable minifiy/uglify -->
        <profile>
            <id>dev</id>
            <activation>
                <property>
                    <name>dev</name>
                </property>
            </activation>
            <properties>
                <env.name>dev</env.name>
            </properties>
        </profile>

        <!-- Controls running the checkstyle plugin, use -DskipCheckstyle to skip -->
        <profile>
            <id>checkstyle</id>
            <activation>
                <property>
                    <name>!skipCheckstyle</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>${maven.checkstyle.plugin.version}</version>
                        <dependencies>
                            <dependency>
                                <groupId>com.puppycrawl.tools</groupId>
                                <artifactId>checkstyle</artifactId>
                                <version>${maven.checkstyle.puppycrawl.version}</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <configLocation>checkstyle.xml</configLocation>
                            <violationSeverity>warning</violationSeverity>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <id>check-style</id>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Controls running the javadoc plugin, use -DskipJavaDoc to skip -->
        <profile>
            <id>javadoc</id>
            <activation>
                <property>
                    <name>!skipJavaDoc</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.plugin.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <quiet>true</quiet>
                            <show>private</show>
                            <encoding>UTF-8</encoding>
                            <quiet>true</quiet>
                            <additionalJOption>-J-Xmx512m</additionalJOption>
                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Controls running the attach-sources plugin, use -DskipSources to skip  -->
        <profile>
            <id>attach-sources</id>
            <activation>
                <property>
                    <name>!skipSources</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Controls running integration tests, specify -DskipITs to skip -->
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>!skipITs</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven.failsafe.plugin.version}</version>
                        <configuration>
                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <phase>verify</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>
